Fixes, different graph

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "watchify": "~2.2.1"
   },
   "dependencies": {
+    "backbone": "^1.1.2",
     "jquery": "~2.1.0",
     "lodash": "^2.4.1",
     "snapsvg": "adobe-webplatform/Snap.svg#dev"
